# Labs_TSFP

./: Interpreter.cabal  README.md
Lab1/IntroSkel/src/: Basics.hs  Pics.hs
Lab2/HaskellTypes/TypesSkel/src/: Classes.hs  List.hs  NestedList.hs  Tree.hs
Lab7/Reader-Writer/: Reader.hs  Writer.hs
Lab8/: Automata.hs  Free.hs
src/: Main.hs
src/Evaluation/: Applicative.hi  Applicative.hs  Big.hi  Big.hs  Normal.hi  Normal.hs  Substitution.hi  Substitution.hs
src/Syntax/: Expression.hi  Expression.hs  Grammar.hi  Grammar.hs  Parser.hi
src/Typing/: Inference.hi  Inference.hs  Type.hi  Unification.hi  Unification.hs
test/: InterpreterTest.hs
test/Evaluation/: NormalWithErrorTest.hs
test/Typing/: InferenceTest.hs
